[gd_scene load_steps=9 format=3 uid="uid://nwedqpj05ild"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_r47g4"]
[ext_resource type="Texture2D" uid="uid://c2omuuv3uvqj0" path="res://images/Buttoning/upgrade base_pressed.png" id="2_7ou2v"]
[ext_resource type="Texture2D" uid="uid://dkt83jm8fu65" path="res://images/Buttoning/upgrade base_hover.png" id="3_51o7m"]
[ext_resource type="Texture2D" uid="uid://c5fo8sb7555qv" path="res://images/Buttoning/upgrade base_disabled.png" id="4_rdfmb"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/gnawedbone_up.gd" id="5_rr4rf"]
[ext_resource type="PackedScene" uid="uid://eauqrroh787" path="res://Scenes/upgrades/purchased/gnawedbone_upp.tscn" id="6_o1ue8"]
[ext_resource type="Texture2D" uid="uid://c5bevvf8it038" path="res://images/UpgradeIcon/upgrades/bone_up.png" id="7_pu0xm"]

[sub_resource type="Theme" id="Theme_ttucu"]
default_font_size = 16

[node name="gnawedbone_up" type="TextureButton" groups=["Persist"]]
visible = false
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
theme = SubResource("Theme_ttucu")
texture_normal = ExtResource("1_r47g4")
texture_pressed = ExtResource("2_7ou2v")
texture_hover = ExtResource("3_51o7m")
texture_disabled = ExtResource("4_rdfmb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_rr4rf")
title = "Gnawed Bones"
description = "Makes Coins 50% cheaper"
cost = 1500
tier = 2
build_req = 5
target_node = ExtResource("6_o1ue8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_pu0xm")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
